# CudaRayTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CleanProjects.bat  CleanProjects.sh  CudaRayTracerExternal.lua  GenerateProjects.sh  README.md  imgui.ini  premake5.lua  tasks.py
CudaRayTracer/: CMakeLists.txt  premake5.lua
CudaRayTracer/src/: Application.cpp  Log.h  Main.cpp  Window.cpp  Window.h
CudaRayTracer/src/Core/: Application.cpp  Application.h  Core.h  ImGuiSink.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
CudaRayTracer/src/Cuda/: CudaLayer.cpp  CudaLayer.h  Kernel.cu
CudaRayTracer/src/Hittables/: AABB.cuh  AABB.h  BVHNode.cpp  BVHNode.h  Hittable.cpp  Hittable.cuh  Hittable.h  HittableList.cpp  HittableList.cuh  HittableList.h  Material.cuh  Material.h  Sphere.cpp  Sphere.cuh  Sphere.h  Texture.cuh  Texture.h
CudaRayTracer/src/ImGui/: ImGuiFileBrowser.cpp  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiLayer.cpp  ImGuiLayer.h
CudaRayTracer/src/Renderer/: Camera.cpp  Camera.h  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
CudaRayTracer/src/Utils/: Math.cu  Math.cuh  RawStbImage.h  Ray.cuh  Ray.h  SharedStructs.h  Vec3.h  gl_tools.h  glfw_tools.h  helper_cuda.h  helper_gl.h  helper_string.h
premake5-cuda/: premake5-cuda-linux.lua
scripts/linux/: CleanProjects.sh  GenerateProjects.sh
scripts/windows/: CleanProjects.bat  GenerateProjects.bat
